// Needed to avoid clash with child wf cancellation types

syntax = "proto3";

package temporal.omes.kitchen_sink.activity;

enum ActivityCancellationType {
  // Initiate a cancellation request and immediately report cancellation to the workflow.
  TRY_CANCEL = 0;
  // Wait for activity cancellation completion. Note that activity must heartbeat to receive a
  // cancellation notification. This can block the cancellation for a long time if activity
  // doesn't heartbeat or chooses to ignore the cancellation request.
  WAIT_CANCELLATION_COMPLETED = 1;
  // Do not request cancellation of the activity and immediately report cancellation to the
  // workflow
  ABANDON = 2;
}

